--- a/L4/public/pass.html
+++ b/L4/public/pass.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="..\..\L3\docs\css\splash.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get ready</title>
+    <title>The End</title>
 </head>
 
 <body>
