--- a/L4/public/pass.html
+++ b/L4/public/pass.html
@@ -13,7 +13,9 @@
     <message class="message">
         <h3>You've saved the world and beaten Zovid!!</h3>
         <p>This leaves a feeling of emptyness, all balance has been restored...</p>
-        <p>Butt at what cost? Wast it worth it?</p>
+        <p>But yet there is so much in balance in this corrupted world.</p>
+        <p>You start wondering if it all was worth it? Now that Zovid is beaten, will you take his place?</p>
+        <p>Or will you leave it to rest?</p>
         <br>
 
         <a href="..\..\index.html" class="button">Main Menu</a>
