--- a/endex.html
+++ b/endex.html
@@ -19,10 +19,10 @@
     <div id="allthethings">
         <div id="left"></div>
         <div id="single">
-            <p><a href="L1\index.html" class="button">START</a></p>
+            <p> <a href="L1\index.html" class="button">START</a></p>
         </div>
         <div id="multiplayer">
-            <p>LEVEL SELECT</p>
+            <p><a href="select.html" class="button">LEVEL SELECT</a></p>
         </div>
         <div id="options">
             <p>OPTIONS</p>
