--- a/select.html
+++ b/select.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main menu ZOVID</title>
+    <title>LevelSelector</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -19,16 +19,16 @@
     <div id="allthethings">
         <div id="left"></div>
         <div id="single">
-            <p><a href="L1\index.html" class="button">START</a></p>
+            <p> <a href="L1\index.html" class="button">LEVEL 1</a></p>
         </div>
         <div id="multiplayer">
-            <p>LEVEL SELECT</p>
+            <p><a href="L2\public\index.html" class="button">LEVEL 2</a></p>
         </div>
         <div id="options">
-            <p>OPTIONS</p>
+            <p><a href="L3/docs/index.html" class="button">LEVEL 3</a></p>
         </div>
         <div id="credits">
-            <p>CREDITS</p>
+            <p><a href="L4\public\index.html" class="button">BOSS FIGHT</a></p>
         </div>
         <div id="right"></div>
 
