--- a/L4/public/pass.html
+++ b/L4/public/pass.html
@@ -18,7 +18,7 @@
         <p>Or will you leave it to rest?</p>
         <br>
 
-        <a href="..\..\index.html" class="button">Main Menu</a>
+        <a href="..\..\endex.html" class="button">Main Menu</a>
 
 </body>
 
